# mushroom_map

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pytest.ini
.github/: dependabot.yml
db/: migrate.py
docs/: architecture.md  copernicus_download.md  copernicus_migration.md  deployment.md  forest_sources_analysis.md  mobile-app-2026-05.md  mobile-verification-2026-05.md  oopt_download.md  osm_roads_download.md  overview.md  redesign-2026-04.md  roadmap_content_ideas.md  rosleshoz_coordinate_bug.md  rosleshoz_download.md  terranorte_download.md  website_plan.md
infra/: .env.prod.example  Caddyfile  Caddyfile.ru-proxy
pipelines/: README.md  build_basemap.py  build_district_tiles.py  build_felling_tiles.py  build_forest_lo_tiles.sh  build_forest_tiles.sh  build_hillshade_tiles.py  build_oopt_tiles.py  build_protective_tiles.py  build_roads_tiles.py  build_soil_tiles.py  build_terrain.py  build_tiles.py  build_water_tiles.py  build_waterway_tiles.py  build_wetlands_tiles.py  db_utils.py  download_fgislk_tiles.py  download_fgislk_wfs.py  extract_places.py  extract_vk_districts.py  fgislk_tiles_to_geojson.py  (+18 more)
services/api/: Dockerfile  Dockerfile.prod  pyproject.toml
services/api/src/api/: __init__.py  db.py  main.py  rate_limit.py  settings.py
services/api/src/api/auth/: __init__.py  dependencies.py  jwt_tokens.py  refresh.py  users.py  yandex.py
services/api/src/api/routes/: auth.py  cabinet.py  districts.py  forecast.py  forest.py  mobile.py  places.py  regions.py  soil.py  species.py  stats.py  terrain.py  tiles.py  user.py  water.py
services/api/tests/: _test_env.py  conftest.py  test_api_smoke.py  test_auth_refresh.py  test_cabinet_crud.py  test_forecast.py  test_mobile_jwt.py  test_mobile_regions.py  test_oauth_state.py  test_places.py
services/geodata/: pyproject.toml
services/geodata/src/geodata/: __init__.py  db.py  types.py
services/geodata/src/geodata/sources/: __init__.py  base.py  copernicus.py  osm.py  terranorte.py
services/geodata/src/geodata/sources/rosleshoz/: __init__.py  formula.py  source.py
services/geodata/tests/: test_formula_parser.py
services/placenames/: pyproject.toml
services/placenames/src/placenames/: __init__.py  gazetteer.py  geocode.py  ner.py
services/species_registry/: pyproject.toml
services/species_registry/src/species_registry/: __init__.py  loader.py
(+379 files in other folders)
