[project]
name = "mushroom-geodata"
version = "0.1.0"
description = "Forest data ingestion (OSM/Copernicus/Rosleshoz) and vector tiles for mushroom-map"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "shapely>=2.0",
    "pyproj>=3.6",
    "geojson>=3.1",
    "psycopg[binary]>=3.2",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "rasterio>=1.3",       # для Copernicus
    "rtree>=1.2",
    "click>=8.1",
    "tqdm>=4.66",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
mushroom-geodata = "geodata.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geodata"]
