[project]
name = "mushroom-placenames"
version = "0.1.0"
description = "Russian placename extraction (Natasha NER) + gazetteer for mushroom-map"
requires-python = ">=3.11"
dependencies = [
    "natasha>=1.6",
    "pymorphy3>=2.0",
    "psycopg[binary]>=3.2",
    "shapely>=2.0",
    "h3>=4.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "click>=8.1",
    "tqdm>=4.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/placenames"]
